new calendar & react router added

--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "@types/jest": "^27.0.2",
     "@types/node": "^16.10.2",
     "@types/react": "^17.0.25",
+    "@types/react-big-calendar": "^0.36.1",
     "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.3.2",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-big-calendar": "^0.38.0",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
