--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "this & that",
+  "name": "Task list, calendar, habits.",
   "icons": [
     {
       "src": "favicon.ico",
@@ -8,9 +8,9 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "tickios.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "240x240"
     },
     {
       "src": "logo512.png",
